I changed Filter::Reference to prefer nfreeze().

There have been no complaints with the 0.07_xx subversions, and they
contain useful changes, so the version is bumped to 0.08.

Mentioned the "POE2" project in the README file.

Added an undocumented command line switch to samples/poing.perl that
specifies the maximum number of hours to run.


0.0704 1999.11.14
-----------------

Include some modules that were mistakenly left out of 0.0703.


0.0703 1999.08.20
-----------------

Removed closure optimizations from the Wheel classes.  The later
addition of $wheel->event() subtly broke them.

Added poing.perl, a multi-host ICMP ping program, to the samples
directory.  My ISP was down, so I hacked this together, "borrowing" a
lot of code from Net::Ping.  As such, it's neither friendly to
configure nor commented.

Sessions' "default" option didn't confess, contrary to the
documentation.


0.0702 1999.07.30
-----------------

Made BindAddress optional for UNIX client sockets.  It's still
required for server sockets.  Updated the documentation for the
change, fixed some typos, and included PF_INET and PF_UNIX.

Changed POE::Kernel::_enqueue_state from a linear search to a binary
search, but only if there are 32+ events in the queue.  Smaller queues
are still searched linearly, on assumption that it's quicker because
there's less overhead.


0.0701 1999.07.01
-----------------

Fixed a race or TCP/IP stack problem in SocketFactory.  SocketFactory
was firing a "connect error 0" if the server side sent data
immediately.  The problem was tested on four systems: Linux (broke);
Solaris (broke); FreeBSD (worked); OS/2 (worked).  Go figure.  It
should work on all four now.

Modified POE::Filter::HTTPD to respond with the protocol version
(hardcoded to 1.0).  The wget utility had a problem with 'HTTP ...',
and I assume it won't be the only thing to.

Replaced a regular expression in POE::Filter::Reference with a
substr() call.  The regexp was used to frame input streams, and large